Issue 4720: Reduce cpu use on client (#4707)
Attempts to reduce CPU usage on the client.

Signed-off-by: Tom Kaitchuck <tom.kaitchuck@emc.com>
Signed-off-by: ManishKumarKeshri <manish.keshri562@gmail.com>